--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.4"
   }
 }
