--- a/package.json
+++ b/package.json
@@ -48,10 +48,16 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
+    "antd-theme-webpack-plugin": "^1.3.9",
+    "babel-plugin-import": "^1.13.3",
+    "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "prettier": "^2.2.1",
+    "react-app-rewired": "^2.1.8",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
   }
