--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -55,7 +55,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "less": "^4.1.1",
-    "less-loader": "^8.0.0",
+    "less-loader": "^7.0.2",
     "prettier": "^2.2.1",
     "react-app-rewired": "^2.1.8",
     "styled-components": "^5.2.1",
