--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "antd": "^4.13.1",
+    "axios": "^0.21.1",
     "craco-less": "^1.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -57,5 +58,6 @@
     "prettier": "^2.2.1",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
