env: type 설정 방식 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "typeRoots": ["./src/type.d.ts"]
+    "typeRoots": ["src/types/*"]
   },
   "include": ["src"]
 }
