--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -49,6 +51,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
